load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("@sp1_zorch_pip//:requirements.bzl", "requirement")

# Shard prover input loading: SP1 GPU-dump fixtures + rw_constraints chips.
py_library(
    name = "shard_prover",
    srcs = [
        "chip_loader.py",
        "fixture_loader.py",
        "serialize.py",
        "types.py",
    ],
    visibility = ["//visibility:public"],
    # serialize.py's jagged imports are TYPE_CHECKING-only by design — adding
    # //sp1_zorch/jagged deps here swaps consumers' jax wheel via pip-hub
    # sys.path shadowing (#60).
    deps = [
        requirement("jax"),
        requirement("numpy"),
        requirement("rw_constraints"),
        requirement("zk_dtypes"),
    ],
)

# Shared scaffolding for the verify_* byte-match runnables: SP1's duplex
# challenger, the shard preamble stream, and the core-machine jagged regions.
py_library(
    name = "replay",
    srcs = ["replay.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":prove_shard",
        ":shard_prover",
        "//sp1_zorch/commit:region",
        "//sp1_zorch/logup_gkr",
        "//sp1_zorch/poseidon2:koalabear16",
        "@zorch//zorch:transcript",
        "@zorch//zorch/hash/poseidon2",
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

# The shard proof as one zorch ProveChain of stage Rounds (docs/shard-pipeline.md).
py_library(
    name = "prove_shard",
    srcs = ["prove_shard.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":shard_prover",
        "//sp1_zorch/commit:region",
        "//sp1_zorch/commit:smcs",
        "//sp1_zorch/commit:trace_commit",
        "//sp1_zorch/jagged:open",
        "//sp1_zorch/jagged:prover",
        "//sp1_zorch/logup_gkr",
        "//sp1_zorch/zerocheck",
        "@zorch//zorch:round",
        "@zorch//zorch:transcript",
        "@zorch//zorch/coding:reed_solomon",
        "@zorch//zorch/utils:bits",
        requirement("jax"),
        requirement("rw_constraints"),
        requirement("zk_dtypes"),
    ],
)

# The shard verifier as one zorch VerifyChain of stage duals, mirroring
# prove_shard round for round (docs/shard-pipeline.md).
py_library(
    name = "verify_shard",
    srcs = ["verify_shard.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":prove_shard",
        ":shard_prover",
        "//sp1_zorch/commit:region",
        "//sp1_zorch/commit:smcs",
        "//sp1_zorch/jagged:prover",
        "//sp1_zorch/jagged:verifier",
        "//sp1_zorch/logup_gkr",
        "//sp1_zorch/zerocheck",
        "@zorch//zorch:round",
        "@zorch//zorch:transcript",
        "@zorch//zorch/coding:reed_solomon",
        "@zorch//zorch/utils:bits",
        requirement("jax"),
        requirement("rw_constraints"),
        requirement("zk_dtypes"),
    ],
)

# Shared four-stage chain fixture for the dual-chain test suites
# (verify_shard_test here, jagged:verifier_test).
py_library(
    name = "chain_testkit",
    testonly = True,
    srcs = ["chain_testkit.py"],
    visibility = ["//visibility:public"],
    deps = [
        ":prove_shard",
        ":shard_prover",
        ":verify_shard",
        "//sp1_zorch/commit:region",
        "//sp1_zorch/commit:smcs",
        "//sp1_zorch/logup_gkr",
        "//sp1_zorch/poseidon2:koalabear16",
        "@zorch//zorch:round",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/hash/poseidon2",
        "@zorch//zorch/testkit:transcript",
        requirement("jax"),
        requirement("numpy"),
        requirement("rw_constraints"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "prove_shard_test",
    # medium: the GKR and zerocheck legs run eager composite dispatch on CPU
    # (same cost shape as logup_gkr:prover_test).
    # timeout long: ~170s locally; overruns the medium 300s cap on a loaded
    # shared CI runner (2-3x slower under parallel test load).
    size = "medium",
    timeout = "long",
    srcs = ["prove_shard_test.py"],
    deps = [
        ":prove_shard",
        ":replay",
        ":shard_prover",
        "//sp1_zorch:testkit",
        "//sp1_zorch/commit:region",
        "//sp1_zorch/commit:smcs",
        "//sp1_zorch/commit:trace_commit",
        "//sp1_zorch/logup_gkr",
        "//sp1_zorch/poseidon2:koalabear16",
        "//sp1_zorch/zerocheck",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/hash/poseidon2",
        "@zorch//zorch/testkit:transcript",
        requirement("absl_py"),
        requirement("jax"),
        requirement("numpy"),
        requirement("rw_constraints"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "verify_shard_test",
    # large/eternal: the full four-stage prover run plus the dual chain and
    # three chain-level tamper replays, all eager composite dispatch on CPU
    # (~4.5 min locally; a loaded shared CI runner is 2-3x slower).
    size = "large",
    timeout = "eternal",
    srcs = ["verify_shard_test.py"],
    deps = [
        ":chain_testkit",
        ":shard_prover",
        ":verify_shard",
        "//sp1_zorch:testkit",
        "@zorch//zorch/testkit:transcript",
        requirement("absl_py"),
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "fixture_loader_test",
    size = "small",
    srcs = ["fixture_loader_test.py"],
    deps = [
        ":shard_prover",
        requirement("absl_py"),
        requirement("jax"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "serialize_test",
    size = "small",
    srcs = ["serialize_test.py"],
    deps = [
        ":prove_shard",
        ":shard_prover",
        "//sp1_zorch/commit:region",
        "//sp1_zorch/jagged:open",
        "//sp1_zorch/jagged:prover",
        "//sp1_zorch/logup_gkr",
        "//sp1_zorch/zerocheck",
        "@zorch//zorch/logup_gkr",
        "@zorch//zorch/sumcheck",
        requirement("absl_py"),
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)

# Host-bytes ctypes binding for SP1's shard verifier (no JAX involvement).
py_library(
    name = "sp1_ffi",
    srcs = ["sp1_ffi.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "verify_prove_shard",
    srcs = ["verify_prove_shard.py"],
    # rsp byte-match of the assembled ProveChain (~1.5 GB/shard, GPU trace
    # commit) — a runnable, not a unit test:
    #   bazel run //sp1_zorch/shard_prover:verify_prove_shard -- \
    #       --shard_dir=/path/to/rsp_dump/shardN
    deps = [
        ":prove_shard",
        ":replay",
        ":shard_prover",
        ":sp1_ffi",
        "//sp1_zorch/commit:smcs",
        "//sp1_zorch/logup_gkr",
        "//sp1_zorch/poseidon2:koalabear16",
        "@zorch//zorch/hash:compression",
        "@zorch//zorch/hash:sponge",
        "@zorch//zorch/hash/poseidon2",
        "@zorch//zorch/poly:poly",
        requirement("absl_py"),
        requirement("jax"),
        requirement("jax_cuda12_plugin"),
        requirement("zk_dtypes"),
        requirement("jax_cuda12_pjrt"),
    ],
)

py_binary(
    name = "verify_shard_fixture",
    srcs = ["verify_shard_fixture.py"],
    # Fixture check over a local rsp GPU-trace capture (~1.5 GB/shard) — a
    # runnable, not a unit test:
    #   bazel run //sp1_zorch/shard_prover:verify_shard_fixture -- \
    #       --shard_dir=/path/to/rsp_dump/shardN
    deps = [
        ":shard_prover",
        requirement("absl_py"),
        requirement("zk_dtypes"),
    ],
)
