load("@rules_python//python:defs.bzl", "py_binary")
load("@sp1_zorch_pip//:requirements.bzl", "requirement")

# CPU dev utility: extract a shard's real dimensions into SP1 reference-prover
# bench-input formats, so the SP1-vs-sp1-zorch wall-clock comparison runs both
# provers on the same shard. See docs/sp1-baseline.md.
py_binary(
    name = "sp1_baseline",
    srcs = ["sp1_baseline.py"],
    deps = [
        "//sp1_zorch/commit:region",
        "//sp1_zorch/logup_gkr",
        "//sp1_zorch/shard_prover",
        "//sp1_zorch/shard_prover:replay",
        requirement("jax"),
        requirement("zk_dtypes"),
    ],
)
