load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("@sp1_zorch_pip//:requirements.bzl", "requirement")

# SP1's zerocheck: constraint RLC over zorch's constraint_eval, the sumcheck
# rounds driven by the SP1-schedule jagged engine (height-aware).
py_library(
    name = "zerocheck",
    srcs = [
        "__init__.py",
        "_round_composite.py",
        "coeffs.py",
        "jagged.py",
        "prover.py",
        "verifier.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@zorch//zorch/pcs/jagged:region",
        "//sp1_zorch/logup_gkr",
        "@zorch//zorch:constraint_eval",
        "@zorch//zorch:round",
        "@zorch//zorch:verify",
        "@zorch//zorch/sumcheck",
        "@zorch//zorch:transcript",
        "@zorch//zorch/poly:poly",
        requirement("frx"),
        requirement("rw_constraints"),
        requirement("zk_dtypes"),
    ],
)

# The shard's packed dense buffers, shared with the jagged eval-proof stage:
# the jagged outer Hadamard sumcheck reproves Σ D·J̃ over the same committed
# dense, reconstructed from these rather than re-dumped (the eval dump carries
# only its own outputs).
filegroup(
    name = "shard_dense_fixture",
    srcs = [
        "testdata/gpu_fibonacci/inputs/main_dense.npy",
        "testdata/gpu_fibonacci/inputs/prep_dense.npy",
    ],
    visibility = ["//visibility:public"],
)

# A real, valid shard's public-values vector — reused by the LogUp-GKR
# public-values predicate test as ground truth for the constraint accumulator.
filegroup(
    name = "shard_public_values_fixture",
    srcs = ["testdata/gpu_fibonacci/inputs/public_values.npy"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "coeffs_test",
    size = "small",
    srcs = ["coeffs_test.py"],
    deps = [
        ":zerocheck",
        requirement("absl_py"),
        requirement("frx"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "jagged_test",
    # timeout moderate: ~18s locally, but the small 60s cap is too tight on a
    # loaded shared CI runner (2-3x slower under parallel test load).
    size = "small",
    timeout = "moderate",
    srcs = ["jagged_test.py"],
    deps = [
        ":zerocheck",
        "@zorch//zorch:transcript",
        "@zorch//zorch/testkit:transcript",
        "@zorch//zorch/poly:poly",
        requirement("absl_py"),
        requirement("frx"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "jagged_byte_match_test",
    # ~137 s on an RTX 5090; `large` (900 s) leaves headroom for a loaded GPU
    # runner. `eternal` was the CPU band-aid — on CPU the wide constraint_eval
    # compiles monolithically (MLIR greedy-rewriter ~O(N^2), fractalyze/xla#121)
    # and the test never finishes; on GPU it's fast, so this is GPU-only.
    size = "large",
    tags = ["gpu_only"],
    srcs = ["jagged_byte_match_test.py"],
    data = glob(["testdata/gpu_fibonacci/**"]),
    deps = [
        ":zerocheck",
        "@zorch//zorch/pcs/jagged:region",
        "//sp1_zorch/shard_prover",
        "@zorch//zorch/poly:poly",
        requirement("absl_py"),
        requirement("frx"),
        requirement("frx_cuda12_plugin"),
        requirement("frx_cuda12_pjrt"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

# rsp byte-match for the zerocheck stage (GKR replay -> prove_shard_zerocheck
# on the real transcript) — a runnable, not a unit test:
#   bazel run //sp1_zorch/zerocheck:verify_zerocheck -- \
#       --shard_dir=/path/to/rsp_dump/shardN --gkr_cache=/path/to/cache.npz
py_binary(
    name = "verify_zerocheck",
    srcs = ["verify_zerocheck.py"],
    deps = [
        ":zerocheck",
        "//sp1_zorch/logup_gkr",
        "//sp1_zorch/shard_prover",
        "//sp1_zorch/shard_prover:replay",
        "@zorch//zorch/poly:poly",
        "@zorch//zorch:transcript",
        requirement("absl_py"),
        requirement("frx"),
        requirement("frx_cuda12_plugin"),
        requirement("numpy"),
        requirement("zk_dtypes"),
        requirement("frx_cuda12_pjrt"),
    ],
)

# Multi-shard zero-recompile check for the traced total-cap zerocheck route:
# proves each --shard-dirs shard through one ZerocheckStage(total_cap_class=...)
# and asserts a single stage compile across the group. Full-shard dumps stay
# external (too large to vendor); GKR caches are the replay module's npz.
#   bazel run //sp1_zorch/zerocheck:verify_zerocheck_recompile -- \
#       --shard-dirs="$PWD/dump/shard17,$PWD/dump/shard18" \
#       --gkr-cache-dir="$PWD/gkr_caches" \
#       --zc_class_json="$PWD/zc_class.json"
py_binary(
    name = "verify_zerocheck_recompile",
    srcs = ["verify_zerocheck_recompile.py"],
    deps = [
        ":zerocheck",
        "//sp1_zorch/logup_gkr",
        "//sp1_zorch/shard_prover",
        "//sp1_zorch/shard_prover:replay",
        requirement("frx"),
        requirement("frx_cuda12_plugin"),
        requirement("numpy"),
        requirement("zk_dtypes"),
        requirement("frx_cuda12_pjrt"),
    ],
)
py_test(
    name = "verify_zerocheck_test",
    size = "medium",
    srcs = [
        "verify_zerocheck.py",
        "verify_zerocheck_test.py",
    ],
    main = "verify_zerocheck_test.py",
    deps = [
        ":zerocheck",
        "//sp1_zorch/logup_gkr",
        "//sp1_zorch/shard_prover",
        "//sp1_zorch/shard_prover:replay",
        "@zorch//zorch/poly:poly",
        "@zorch//zorch:transcript",
        requirement("absl_py"),
        requirement("frx"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "_round_composite_test",
    size = "small",
    srcs = ["_round_composite_test.py"],
    deps = [
        ":zerocheck",
        "@zorch//zorch/poly:poly",
        "@zorch//zorch/sumcheck",
        requirement("absl_py"),
        requirement("frx"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "prover_test",
    size = "small",
    srcs = ["prover_test.py"],
    deps = [
        ":zerocheck",
        "@zorch//zorch/pcs/jagged:region",
        "//sp1_zorch/logup_gkr",
        "@zorch//zorch/testkit:transcript",
        requirement("absl_py"),
        requirement("frx"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)

py_test(
    name = "verifier_test",
    # timeout moderate: fast locally, but the small 60s cap is too tight on a
    # loaded shared CI runner under hermetic sandbox cold-start.
    size = "small",
    timeout = "moderate",
    srcs = ["verifier_test.py"],
    deps = [
        ":zerocheck",
        "@zorch//zorch/pcs/jagged:region",
        "//sp1_zorch/logup_gkr",
        "@zorch//zorch/testkit:transcript",
        requirement("absl_py"),
        requirement("frx"),
        requirement("numpy"),
        requirement("zk_dtypes"),
    ],
)
